misc info updates

--- a/src/app/homepage/home_page.html
+++ b/src/app/homepage/home_page.html
@@ -6,7 +6,7 @@
 
 <div class="home-body">
   <img src="https://avatars.githubusercontent.com/u/10764966?s=400&u=a47f46f895511422da7236d0d694dee14ac122cf&v=4">
-  <p class="sub-title">Hi, my name's Blake Williams<br>I'm a software engineer at Google working on AR/VR projects</p>
+  <p class="sub-title">Hi, my name's Blake Williams<br>I'm a senior software engineer at Google working on AR/VR projects</p>
 
   <span>
     <a href="https://linkedin.com/in/blauwill">LinkedIn</a>, <a href="https://github.com/blakewilliams1">Github</a>
