Some cleanup to Shasta page

--- a/src/app/projects/shasta/shasta_page.html
+++ b/src/app/projects/shasta/shasta_page.html
@@ -11,8 +11,8 @@
   <p>
     I've had the idea of climbing Mount Shasta and snowboarding back down for about 2 and a half years when I saw
     the mountaineering route topographic maps in the bathroom of
-    <a href="https://goo.gl/maps/q8dLbFUxxyZ9SZ51A">The Fifth Season</a> gear rental in Shasta. I wanted to do it last
-    year, but the snow dried up too quick and my friend had a knee problem so I waited for the next
+    <a href="https://goo.gl/maps/q8dLbFUxxyZ9SZ51A" target="_blank">The Fifth Season</a> gear rental in Shasta. I wanted
+    to do it last year, but the snow dried up too quick and my friend had a knee problem so I waited for the next
     season. We'd been getting ready for the trip this year but unfortunately the friend that would join me got cold
     feet and backed out a day and a half before.<br><br>
 
@@ -45,10 +45,9 @@
     like a stair step to step upwards. It felt like doing stair climbers the last 1300 ft elevation gain to
     like Helen with incredibly heavy pack on my back. The very last stretch to the lake was by far the steepest so far.
     Lake Helen is at 9k ft, I woke up this morning at 3k ft, and was at sea level
-    the day before. The last push the Helen Lake was
-    really slow,
-    you might only walk 20 steps at a time before giving yourself a quick rest to keep heart rate in check. Eventually you do get to there and feel super
-    accomplished. About a dozen other groups are here, some are setting up tents for an early ascent
+    the day before. The last push the Helen Lake was really slow,
+    you might only walk 20 steps at a time before giving yourself a quick rest to keep heart rate in check. Eventually you
+    do get to there and feel super accomplished. About a dozen other groups are here, some are setting up tents for an early ascent
     tomorrow, some are sliding down the hill in front of us on their return from the summit, and a select few are riding
     snowboards and skis back down that same glissade path. 
     <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1yY_W6kyDmTka5Dw1ZaCwi-jPCFCuwWUn" />
@@ -57,22 +56,21 @@
     boosting my confidence for tomorrow. After setting up my tent and melting multiple rounds of snow in my cookware, I
     realize one reason why my pack is so heavy. The Fifth Season gave me a three-person tent, and I didn't bother checking
     before hitting the trail! It definitely felt heavy when I got it, but I just figured that was the nature of snow
-    season tents; I've only ever owned 3-season tents. Because my hiking partner bailed on me two days before, I was
-    resigned to carry almost double gear weight, but now seeing the apartment sized three-person tent, I knew I was
-    literally carrying double right now. If everything went as planned it didn't have to be nearly this hard, but at
-    least I'm able to do it. Final task before bed is repacking my backpack for summit attempt tomorrow. It's basically
-    20% the starting weight now, feeling confident.
-    
+    season tents; I was literally carrying double weight right now. Final task before bed is repacking my backpack for
+    summit attempt tomorrow. It's basically 20% the starting weight now, feeling confident.
   </p>
   <div class="divider"></div>
   <h2>Day 2</h2>I woke up at 4am, and after rolling off my sleeping pad I realized they were puddles of water
   around me. Half of my Camelback leaked into the tent and some of my gear was soaked. Luckily the wet
-  things weren't needed for summit attempt and could be left out to dry, but I now needed to reboil water at 4a.m. when I was supposed to be
+  things weren't needed for summit attempt and could be left out to dry, but I now needed to reboil water at 4am when I was supposed to be
   hitting the trail. I was already behind everyone else because I was snowboarding back down and didn't need to plan as much time for return.
   <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1zLcWGeolWKSMwg3QOdIRoWWhoUjI0mT7" />
   Overall it was an hour setback to fix everything and gear back up, but luckily it put me right at the
-  same departure time as the only other ski campers at lake Helen; a couple from San Francisco. We all headed up Avalanche Gultch together and It's steepness
-  was impressive, sometimes pushing upwards of 32°.
+  same departure time as the only other ski campers at Lake Helen; a couple from San Francisco and a day hiker. We all
+  headed up Avalanche Gultch together and before long the sun had broke the horizon, casting a shadow of Mt. Shasta
+  across the Trinity Alps to the west.
+  <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1yQKoe9MDJ9qhlVryysW2mTDxdl4oarUo" />
+  Avalanche Gulch's steepness was impressive, sometimes <a href="https://caltopo.com/m/1UKB" target="_blank">pushing upwards of 32°.</a>
   <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1yQ5ubiiZeu8exOREqM4JLvO-9CW6RikJ" />
   <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1zbPEm4TvGzFPQtP8qOiEvigGEJuZ8YWF" />
   When the others started slowing down I continued on the last bit
@@ -102,7 +100,7 @@
   <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1zYGv65R9UreNKivoqDDwednyG_7poIz-" style="max-width: 50%; margin-left: auto; margin-right: auto; display: block;"/>
   Back at camp I packed everything up, and headed down to car. Riding the rest of the way down wasn't quite as enjoyable,
   all the snow downhill from there was moderately
-  <a href="https://www.google.com/search?q=sun-cupped+snow&tbm=isch">sun-cupped</a> and you're riding over these craters
+  <a href="https://www.google.com/search?q=sun-cupped+snow&tbm=isch" target="_blank">sun-cupped</a> and you're riding over these craters
   similar to golf ball dimpling, but the dimples were about the size of dinner plates and about 6 to 8 in deep. With all
   the added weight on my back it was hard to ride well over the bad terrain, and I walked the last half mile after
   hitting the tree line. When I got back to the gear outfitters, they said someone radioed that my axe fell out of my
