Linking to Shasta page

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -6,6 +6,17 @@
 
 <mat-card>
   <mat-card-header>
+    <mat-card-title>Climbing Mt. Shasta</mat-card-title>
+    <mat-card-subtitle>Searching for Telos (not really)</mat-card-subtitle>
+    <a href="/shasta" target="_blank"><mat-icon>launch</mat-icon></a>
+  </mat-card-header>
+  <p>
+    I solo climbed Mt. Shasta over 2 days, ascenting the Avalanche Gulch route and taking my snowboarding gear with me
+    to backcountry ride back down after summitting
+  </p>
+</mat-card>
+<mat-card>
+  <mat-card-header>
     <mat-card-title>Hiking the Sahara Desert</mat-card-title>
     <mat-card-subtitle>no, we didn't ride the camels</mat-card-subtitle>
     <a href="/mauritania_trip" target="_blank"><mat-icon>launch</mat-icon></a>
