--- a/src/app/homepage/home_page.html
+++ b/src/app/homepage/home_page.html
@@ -9,7 +9,8 @@
   <p class="sub-title">Hi, my name's Blake Williams<br>I'm a senior software engineer at Google working on AR/VR projects</p>
 
   <span>
-    <a href="https://linkedin.com/in/blauwill">LinkedIn</a>, <a href="https://github.com/blakewilliams1">Github</a>
+    <a href="https://linkedin.com/in/blauwill" target="_blank">LinkedIn</a>,
+    <a href="https://github.com/blakewilliams1" target="_blank">Github</a>
   </span>
 </div>
 
@@ -25,4 +26,3 @@
       </div>
   </div>
 </div>
-
