--- a/src/app/about/about_me_page.scss
+++ b/src/app/about/about_me_page.scss
@@ -1,4 +1,9 @@
 .preamble {
   border-bottom: 1px solid gray;
-  padding: 20px;
+  padding: 20px 20px 20px 5%;
+}
+
+timeline {
+  display: block;
+  margin: 0 5%;
 }
