Final touch-ups to Shasta page

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -8,7 +8,7 @@
   <mat-card-header>
     <mat-card-title>Climbing Mt. Shasta</mat-card-title>
     <mat-card-subtitle>Searching for Telos (not really)</mat-card-subtitle>
-    <a href="/shasta" target="_blank"><mat-icon>launch</mat-icon></a>
+    <a href="/shasta"><mat-icon>launch</mat-icon></a>
   </mat-card-header>
   <p>
     I solo climbed Mt. Shasta over 2 days, ascenting the Avalanche Gulch route and taking my snowboarding gear with me
@@ -19,7 +19,7 @@
   <mat-card-header>
     <mat-card-title>Hiking the Sahara Desert</mat-card-title>
     <mat-card-subtitle>no, we didn't ride the camels</mat-card-subtitle>
-    <a href="/mauritania_trip" target="_blank"><mat-icon>launch</mat-icon></a>
+    <a href="/mauritania_trip"><mat-icon>launch</mat-icon></a>
   </mat-card-header>
   <p>
     In the early spring of 2023 I solo traveled to Mauritania, west Africa to hike through a portion
