--- a/src/app/projects/shasta/shasta_page.html
+++ b/src/app/projects/shasta/shasta_page.html
@@ -34,24 +34,18 @@
     <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1yoA-fibAOScDfSBDFxPNQob8OkvWZtUb" />
     The cabin supposedly is
     right about where things open up and the trees lesson, but neither myself nor the people I was walking in the
-    vicinity of could find it either. I made it about an hour into the hike before the trail got to steep and I needed
-    to put on crampons. I stopped to do this and got my first real good view of Shasta valley behind me.
+    vicinity of could find it either. I made it about an hour into the hike before the trail got too steep and I needed
+    to put on crampons. This is by far the most I've ever used crampons, and they're an absolute godsend in the snow.
+    I stopped to do this and got my first real good view of Shasta valley behind me:
     <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1ynHjIADC_kGpwkGzdWJoHRy84uiQfMSI" />
-    This is by far
-    the most I've ever used crampons, and there an absolute godsend for snow on hills. I kept trudging uphill, the
-    weight of my pack still on my mind but also optimistic about how close lake Helen seem to be. I got a few more good
-    shots of the valley as I went up, and you can see the hill becoming steeper now. At a certain point, you are just
-    climbing stairs. The repeated use of crampons will dig out small holes and you can push your foot into those holes
-    like a stair step to step upwards. It felt like doing stair climbers the last 1300 ft elevation gain to
-    like Helen with incredibly heavy pack on my back. The very last stretch to the lake was by far the steepest so far.
-    Lake Helen is at 9k ft, I woke up this morning at 3k ft, and was at sea level
-    the day before. The last push the Helen Lake was really slow,
-    you might only walk 20 steps at a time before giving yourself a quick rest to keep heart rate in check. Eventually you
-    do get to there and feel super accomplished. About a dozen other groups are here, some are setting up tents for an early ascent
-    tomorrow, some are sliding down the hill in front of us on their return from the summit, and a select few are riding
-    snowboards and skis back down that same glissade path. 
+    I kept trudging uphill, the weight of my pack still on my mind but also optimistic about how close Lake Helen seemed
+    to be. It felt like doing stair climbers the last 1300 ft elevation gain to camp with the incredibly heavy pack on
+    my back. The very last stretch to the camp was by far the steepest so far. Lake Helen is at 9k ft, I woke up this
+    morning at 3k ft, and was at sea level the day before. Eventually you do get to there and feel super accomplished.
+    About a dozen other groups are here, some are setting up tents for an early ascent tomorrow, some are sliding down
+    the hill in front of us on their return from the summit, and a select few are riding snowboards and skis back down
+    that same glissade path. 
     <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1yY_W6kyDmTka5Dw1ZaCwi-jPCFCuwWUn" />
-
     Leaving all the heavy gear I'm not taking to summit is really
     boosting my confidence for tomorrow. After setting up my tent and melting multiple rounds of snow in my cookware, I
     realize one reason why my pack is so heavy. The Fifth Season gave me a three-person tent, and I didn't bother checking
@@ -59,11 +53,15 @@
     season tents; I was literally carrying double weight right now. Final task before bed is repacking my backpack for
     summit attempt tomorrow. It's basically 20% the starting weight now, feeling confident.
   </p>
+
   <div class="divider"></div>
-  <h2>Day 2</h2>I woke up at 4am, and after rolling off my sleeping pad I realized they were puddles of water
-  around me. Half of my Camelback leaked into the tent and some of my gear was soaked. Luckily the wet
-  things weren't needed for summit attempt and could be left out to dry, but I now needed to reboil water at 4am when I was supposed to be
-  hitting the trail. I was already behind everyone else because I was snowboarding back down and didn't need to plan as much time for return.
+  <h2>Day 2</h2>
+  <p>
+  I woke up at 4am, and after rolling off my sleeping pad I realized they were puddles of water
+  around me; half of my Camelback leaked into the tent and some of my gear was soaked. It looked like the drink nozzle
+  wasn't locked closed and something was pressing it open. Luckily the wet things weren't needed for summit attempt and
+  could be left out to dry, but I now needed to reboil water at 4am when I was supposed to be hitting the trail. I was
+  already behind everyone else because I was snowboarding back down and didn't need to plan as much time for return.
   <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1zLcWGeolWKSMwg3QOdIRoWWhoUjI0mT7" />
   Overall it was an hour setback to fix everything and gear back up, but luckily it put me right at the
   same departure time as the only other ski campers at Lake Helen; a couple from San Francisco and a day hiker. We all
@@ -97,7 +95,7 @@
   <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1zXQJIQ4i3_gfzcOTF5QwClc5D-mwBlGB" />
   The conditions were great, the snow had softened, and I got down within 15 minutes back to Lake Helen. Lots of people
   sliding glissading down were filming, would be nice to get those videos somehow. 
-  <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1zYGv65R9UreNKivoqDDwednyG_7poIz-" style="max-width: 50%; margin-left: auto; margin-right: auto; display: block;"/>
+  <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1zYGv65R9UreNKivoqDDwednyG_7poIz-" style="max-width: 60%; margin-left: auto; margin-right: auto; display: block;"/>
   Back at camp I packed everything up, and headed down to car. Riding the rest of the way down wasn't quite as enjoyable,
   all the snow downhill from there was moderately
   <a href="https://www.google.com/search?q=sun-cupped+snow&tbm=isch" target="_blank">sun-cupped</a> and you're riding over these craters
@@ -107,6 +105,5 @@
   pack on the way back. They said they wouldn't fine me for late/lost gear so I didn't bring up the tent size issue.<br><br>
 
   Overall it was a phenominal and exhausting time, 10/10.
-  <p>
   </p>
 </mat-card>
