--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -6,6 +6,16 @@
 
 <mat-card>
   <mat-card-header>
+    <mat-card-title>CSS Injections for Websites</mat-card-title>
+    <mat-card-subtitle>The internet how it should be</mat-card-subtitle>
+    <a href="/cssinjection"><mat-icon>launch</mat-icon></a>
+  </mat-card-header>
+  <p>
+    A nice an concise set of CSS injections I add to specific websites for better browsing experience.
+  </p>
+</mat-card>
+<mat-card>
+  <mat-card-header>
     <mat-card-title>Climbing Mt. Shasta</mat-card-title>
     <mat-card-subtitle>Searching for Telos (not really)</mat-card-subtitle>
     <a href="/shasta"><mat-icon>launch</mat-icon></a>
