Cleaning up css injection css

--- a/src/app/projects/cssinjection/css_injection_page.html
+++ b/src/app/projects/cssinjection/css_injection_page.html
@@ -32,26 +32,26 @@
     company seems pressured to compete with Tiktok.</a> I don't think it encourages healthy, intentional, or mindful viewing
     and it feels more like brainrot when you viewing Shorts, as if the Tiktok content model is something to
     aspire to copy. These injections will hide them from your view.</p>
-    <pre><code [innerHTML]="youtubeCss"></code></pre>
+    <pre class="code-container"><code [innerHTML]="youtubeCss"></code></pre>
 
 
   <h1>Twitter.com</h1>
   <p>I don't want to see what the people I follow like and retweet. I want to see <i>their</i> content!!
     Most of the retweets and likes from other people I see tend to be political, hot takes, or tiktok
     reposts. I don't miss this spam for the most part.</p>
-    <pre><code [innerHTML]="twitterCss"></code></pre>
+    <pre class="code-container"><code [innerHTML]="twitterCss"></code></pre>
 
   <h1>Pornhub.com</h1>
   <p>I'm not a fan of 'step fantasy' porn, where the actors pretend to be related. I really don't get
     this taboo appeal, but it's all over the platform. Sure you can set a Taste Profile if you have
     even a free account, but this only blocks categorical content on the My Recommendations page.
     Taste Profile doesn't apply when using the site in any other way than that.</p>
-    <pre><code [innerHTML]="pornhubCss"></code></pre>
+    <pre class="code-container"><code [innerHTML]="pornhubCss"></code></pre>
 
   <h1>Spanishdict.com</h1>
   <p>This is a great website for viewing verb conjugations if you're learning spanish. This removes a modal
     that blocks the screen on page load</p>
-    <pre><code [innerHTML]="spanishDictCss"></code></pre>
+    <pre class="code-container"><code [innerHTML]="spanishDictCss"></code></pre>
 
   <h1>Shortcomings</h1>
   <p>This (and any CSS injector) is not without it's shortcomings. There are some things that it
