Adding boilerplate for burning man 2023 trip

--- a/src/app/projects/fursuit/fursuit_page.html
+++ b/src/app/projects/fursuit/fursuit_page.html
@@ -4,4 +4,53 @@
   <a mat-tab-link routerLink="/about">About</a>
 </nav>
 
+<mat-card>
+  <h1 style="text-align: center">What it takes to make a fursuit</h1>
+  How hard could it be? Well, the answer really depends on whether or not you hit burnout, and how hard it hits you.
 
+  It'll make more sense to explain the process categorically by individual pieces rather than chronologically.
+  Feel free to scroll down or click to specifc sections of interest.
+
+  <div class="table-of-contents">
+    <a href="fursuit#head">Head</a>
+    <a href="fursuit#hands">Hands</a>
+    <a href="fursuit#bodysuit">Body</a>
+    <a href="fursuit#feet">Feet</a>
+    <a href="fursuit#tail">Tail</a>
+  </div>
+
+  <div class="divider"></div>
+  <div id="head" class="section-header">
+    <h2>Head</h2>
+  </div>
+  
+  <!-- <img loading="lazy" src="https://lh3.google.com/u/0/d/1cKCwfkx607ysGBht_MoLufPi2JWl4Wgs" /> -->
+
+  <div class="divider"></div>
+  <div id="hands" class="section-header">
+    <h2>Hands</h2>
+  </div>
+  
+  <!-- <img loading="lazy" src="https://lh3.google.com/u/0/d/1cKCwfkx607ysGBht_MoLufPi2JWl4Wgs" /> -->
+
+  <div class="divider"></div>
+  <div id="bodysuit" class="section-header">
+    <h2>Bodysuit</h2>
+  </div>
+  
+  <!-- <img loading="lazy" src="https://lh3.google.com/u/0/d/1cKCwfkx607ysGBht_MoLufPi2JWl4Wgs" /> -->
+
+  <div class="divider"></div>
+  <div id="feet" class="section-header">
+    <h2>Feet</h2>
+  </div>
+  
+  <!-- <img loading="lazy" src="https://lh3.google.com/u/0/d/1cKCwfkx607ysGBht_MoLufPi2JWl4Wgs`" /> -->
+
+  <div class="divider"></div>
+  <div id="tail" class="section-header">
+    <h2>Tail</h2>
+  </div>
+  
+  <!-- <img loading="lazy" src="https://lh3.google.com/u/0/d/1cKCwfkx607ysGBht_MoLufPi2JWl4Wgs" /> -->
+</mat-card>
