Renaming About Me page to Career page

--- a/src/app/homepage/home_page.html
+++ b/src/app/homepage/home_page.html
@@ -1,7 +1,7 @@
 <nav mat-tab-nav-bar>
   <a mat-tab-link routerLink="/projects">Projects</a>
   <a mat-tab-link [style.opacity]="1" routerLink="/">Home</a>
-  <a mat-tab-link routerLink="/about">About</a>
+  <a mat-tab-link routerLink="/career">Career</a>
 </nav>
 
 <div class="home-body">
