--- a/src/app/projects/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/projects/burning_man_2023/burning_man_2023_page.html
@@ -1,7 +1,7 @@
 <nav mat-tab-nav-bar>
   <a mat-tab-link routerLink="/projects">Projects</a>
   <a mat-tab-link routerLink="/">Home</a>
-  <a mat-tab-link routerLink="/about">About</a>
+  <a mat-tab-link routerLink="/career">Career</a>
 </nav>
 
 <img class="wait-img" src="https://t4.ftcdn.net/jpg/02/38/52/19/360_F_238521952_fBFiEJuryfKNUJ6ElmZChaQIMv6CzGWV.jpg"/>
