--- a/src/app/qr/aboutqr/about_qr_page.html
+++ b/src/app/qr/aboutqr/about_qr_page.html
@@ -1,7 +1,7 @@
 <nav mat-tab-nav-bar>
     <a mat-tab-link routerLink="/projects">Projects</a>
     <a mat-tab-link routerLink="/">Home</a>
-    <a mat-tab-link routerLink="/about">About</a>
+    <a mat-tab-link routerLink="/career">Career</a>
 </nav>
   
 <div class="page-container">
