Separating projects and travels into their own pages
The lists were growing large enough to merit separate pages

--- a/src/app/qr/aboutqr/about_qr_page.html
+++ b/src/app/qr/aboutqr/about_qr_page.html
@@ -1,6 +1,7 @@
 <nav mat-tab-nav-bar>
-    <a mat-tab-link routerLink="/projects">Projects</a>
     <a mat-tab-link routerLink="/">Home</a>
+    <a mat-tab-link routerLink="/travels">Travels</a>
+    <a mat-tab-link routerLink="/projects">Projects</a>
     <a mat-tab-link routerLink="/career">Career</a>
 </nav>
   
