--- a/src/app/travels/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/travels/mauritania_trip/mauritania_trip_page.html
@@ -1,6 +1,7 @@
 <nav mat-tab-nav-bar>
-  <a mat-tab-link routerLink="/projects">Projects</a>
   <a mat-tab-link routerLink="/">Home</a>
+  <a mat-tab-link routerLink="/travels">Travels</a>
+  <a mat-tab-link routerLink="/projects">Projects</a>
   <a mat-tab-link routerLink="/career">Career</a>
 </nav>
 
@@ -11,7 +12,7 @@
 
   <p>
     About a year and a half before this trip happened, I'd seen
-    <a href="https://www.youtube.com/watch?v=JRuIUhK1vcc">a video</a> of people hopping the world's longest train -a
+    <a href="https://www.youtube.com/watch?v=JRuIUhK1vcc" target="_blank">a video</a> of people hopping the world's longest train -a
     freight train cutting through the Sahara desert- and was interested in it ever since then as a "someday adventure".
     After looking further into the country I decided to make a trip out of it that led to the story you see here! As
     you read this, keep in mind that this was done with the following circumstances:
