Adding some google drive image links for WIP burning man page

--- a/src/app/projects/fursuit/fursuit_page.html
+++ b/src/app/projects/fursuit/fursuit_page.html
@@ -24,29 +24,45 @@
   <div id="head" class="section-header">
     <h2>Head</h2>
   </div>
-  
-  <!-- <img loading="lazy" src="https://lh3.google.com/u/0/d/1cKCwfkx607ysGBht_MoLufPi2JWl4Wgs" /> -->
+
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hydUllmBv3eIrA09_ijr5hZXszqYTFQr" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hxXz9USfZCDvCR9oIV-UtEkQjHHlau35" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1iG0BLSyDQLRIrVIK0ZB8DDMGkTG2GzxZ" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1icVbM01Tn5doj1jK7CBU-6us10gUDXXL" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1iMh-aFOTPsy0_fScsNljvlHvc-H_eP3o" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1icXbNWwDfQC76vBW87k1zHEGGfNR67FH" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1idBDiQQnzu3SvDNneh_cpMebHKKFOraD" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1iYDaF6C6BuZDk6jNjjRjggN4xeudJ6Cx" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1iTAiyVe_wwxSdCrDyBbP5SiqGliCm10c" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1ir1Y2U03ebZ8pl6vzG4DDylbMA7VwZAj" />
 
   <div class="divider"></div>
   <div id="hands" class="section-header">
     <h2>Hands</h2>
   </div>
-  
-  <!-- <img loading="lazy" src="https://lh3.google.com/u/0/d/1cKCwfkx607ysGBht_MoLufPi2JWl4Wgs" /> -->
+
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hlLYP_Fd436Pze2pkGOWYPA1lbdhc50O" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hjnVSBHOdSAkhcfDWY232iKSJdKJQ6Ja" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hwP1Dx_a_WdaP8-kKeD1m3YvDUOUwFrj" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hzgeaVNngUyCEFo5nezAbv1EnLQB3uUJ" />
 
   <div class="divider"></div>
   <div id="bodysuit" class="section-header">
     <h2>Bodysuit</h2>
   </div>
-  
-  <!-- <img loading="lazy" src="https://lh3.google.com/u/0/d/1cKCwfkx607ysGBht_MoLufPi2JWl4Wgs" /> -->
+
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hSwGnwUpbYWFdfAK36R3RgRE3wuQKCHH" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hX5pz24gvc3o_AhP6Qht5BTFSarz6FbC" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hcfIkP85XabSqM3eeXPiiYuehmSr0aG7" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hlRn0Rb9PiiaI0mIVBoU-6hfg02NRXhj" />
 
   <div class="divider"></div>
   <div id="feet" class="section-header">
     <h2>Feet</h2>
   </div>
-  
-  <!-- <img loading="lazy" src="https://lh3.google.com/u/0/d/1cKCwfkx607ysGBht_MoLufPi2JWl4Wgs`" /> -->
+
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hIF5p7vxfDE8LcK8EZqACYqFgwsSjJzr" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hZFnxe1kZ67B_bGCilIGz9CT2p9ppbnr" />
 
   <div class="divider"></div>
   <div id="tail" class="section-header">
