--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -5,4 +5,52 @@
   <a mat-tab-link routerLink="/career">Career</a>
 </nav>
 
-<img class="wait-img" src="https://t4.ftcdn.net/jpg/02/38/52/19/360_F_238521952_fBFiEJuryfKNUJ6ElmZChaQIMv6CzGWV.jpg"/>
+
+<mat-card>
+  <h1 style="text-align: center">Burning Man, 2023</h1>
+  <div class="divider"></div>
+  <!-- TODO: Intro description and forward -->
+  https://drive.google.com/file/d/1fC-7S0hK4nHbfc3KJ0vqti5kr3cfBFx8/view?usp=sharing
+
+  <div class="divider"></div>
+  <h2>Thursday</h2>
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1dcpKKfxqnnMkN6m68u5JMPxxxNrlu4HU" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1dfepnJDoDTPxKHDiRgCkD1K2I0Lprm9w" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1dy2W83cd1S-dxdaGiBielPX_VHlsa1n1" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1eQCwouvilXuVQUsONlq7RhDnFdKVYWLu" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1f3U4ctb_BYvZrBq96U2spH7A1YK8yazB" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1frAMFJoDtbgOj40lqdMiy0xGEfTS0GBd" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1h8Q0Z2CL5Kfeg66mS1QqcwmXHRWidmrG" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1f24V_l4E6qCcqEAPNonqZeuvBzPboFtT" />
+
+  <div class="divider"></div>
+  <h2>Friday</h2>
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1eJam7MQq8hFLr7fZHeFjXEL--wbkCPa_" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fq4qjrR56wBkms1A4nY4SFyTsT7dhcIh" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fbN-gbsk6_wRhy4o1rSZ09mYE2OmC6Nh" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fTRwkDn6vEJWsC240-GM7sqgABi-HlyJ" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fC-7S0hK4nHbfc3KJ0vqti5kr3cfBFx8" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fGJdrG6KSzC0xqMBY-xnw-xH88VqLp5R" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fTitUpWW1vzaINwgbUSkrrrAaAXpbpih" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fN_XTET2VT57lVDMYlnUs5MhUlYKh0xS" />
+  
+  <div class="divider"></div>
+  <h2>Saturday</h2>
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1f099hljTuJ8JC9OwZEZ8brcbwOZfOJDZ" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1eIt9fFILRSW8hvPFBspF7cU6uRP6GktA" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1eIsBRl-FJFAgt3tD8jP59kP0NUtBXPPU" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fNU-LlmRO2yaawkyL1YEbHw8VlcLTXl7" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fh-Ec1AlbD6uDHN0sEYlarZh75LqWy_N" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1fgtlRrmWd3eGwOiIo-8wVEvp5EFw1FX7" />
+
+  <div class="divider"></div>
+  <h2>Sunday</h2>
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1gEHinc47Zo0VVTRi-CRkC40ejcLyV1vU" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1gC1jjgVhm18mlAr0tGQszk8jzBTkLbPy" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1gfTB-piVn5TtMAe6VWa_NlGud9eXGUa0" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1gZMhMmmCasD4pDIidUVBUb0kdYTV_UGw" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1ggWO04R0GZzAJW6Cq07mZ2Um86QHFBmD" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1h01dqqYqIiBEN-VzYfe835pUH3M2K5to" />
+
+  
+</mat-card>
