CSS improvements to shasta page

--- a/src/app/projects/fursuit/fursuit_page.html
+++ b/src/app/projects/fursuit/fursuit_page.html
@@ -6,7 +6,9 @@
 </nav>
 
 <mat-card>
+  
   <h1 style="text-align: center">What it takes to make a fursuit</h1>
+  <div class="divider"></div>
   How hard could it be? Well, the answer really depends on whether or not you hit burnout, and how hard it hits you.
 
   It'll make more sense to explain the process categorically by individual pieces rather than chronologically.
@@ -18,6 +20,7 @@
     <a href="fursuit#bodysuit">Body</a>
     <a href="fursuit#feet">Feet</a>
     <a href="fursuit#tail">Tail</a>
+    <a href="fursuit#result">End Result</a>
   </div>
 
   <div class="divider"></div>
@@ -25,15 +28,68 @@
     <h2>Head</h2>
   </div>
 
+  <p>
+    I started with a 3d printed headbase that I bought from an established maker named
+    <a href="https://www.mixedcandycostumes.com/">MixedCandy</a>, off of their etsy page they sold a
+    base with the expression "grumpy K9". Onto this I added several layers of masking tape in alternating grain
+    direction and drew on the pattern where color boundaries would be, along with more annotations to help with
+    cutting and keeping track of how the peices align after they're off the head. We'll use these peices as a
+    pattern to cut fur later.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hydUllmBv3eIrA09_ijr5hZXszqYTFQr" />
+  <p>
+    I had a personal goal of designing the interior to be completely removable everywhere that my head physically
+    touched for easier cleaning. I used quarter-sized disk magnets on the inside of the base, paired with matching
+    magnets inside of spandex covered foam "cups" that wrap around the sides and back of your head. Also, I added a
+    thin removable chin rest. This is what it looks like on the inside.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hxXz9USfZCDvCR9oIV-UtEkQjHHlau35" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1iG0BLSyDQLRIrVIK0ZB8DDMGkTG2GzxZ" />
+  <p>
+    I don't have many progress pics of hand sewing the fur mask together but this is the way it looked before putting
+    it onto the base. I felt I had to hand sew it to get a <i>very</i> small seam that wouldn't buldge and deform
+    against the base. Kinda Silence of the Lambs vibes, right?
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1icVbM01Tn5doj1jK7CBU-6us10gUDXXL" />
+  <p>
+    After almost 3 weeks of hand-sewing the mask for 2-5 hours a day, I finally finished the face and neck. This was
+    the first time seeing it "properly" stretched over the base it was made for.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1iMh-aFOTPsy0_fScsNljvlHvc-H_eP3o" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1icXbNWwDfQC76vBW87k1zHEGGfNR67FH" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1idBDiQQnzu3SvDNneh_cpMebHKKFOraD" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1iYDaF6C6BuZDk6jNjjRjggN4xeudJ6Cx" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1iTAiyVe_wwxSdCrDyBbP5SiqGliCm10c" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1icXbNWwDfQC76vBW87k1zHEGGfNR67FH" />
+  <p>
+    This was another novel thing I tried out in my build process: I wanted to REALLY be sure that the fur would never
+    come unglued in a few critical points along the face; if they did, there would be no way to fix it once the fabric
+    fusion glue dries. These are places like concave dimples, the underside of cheeks, the furled eyebrow/nose bridge,
+    etc.. Anywhere with significant concave curves. My idea was to drill very small holes in those spots, stretch the
+    fur mask over the base, then push sewing needles through the holes and mask to create a loop of threading. I would
+    tie the threading off with a lot of slack in the loops like this:
+  </p>
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1idBDiQQnzu3SvDNneh_cpMebHKKFOraD" />
+  <p>
+    I wanted not only to make permanent physical anchors holding these key spots in place, but also help dramatically
+    speed up my working time while glueing the mask to the base. I opted for fabric fusion after weighing a few options
+    because it was a clear permanent fabric glue with a "long" working time of ~ 30 minutes which still felt like very
+    little time.
+  </p>
+  <p>
+    By "pre-stretching" the mask over the base to add these thread loop anchors, I was able to grab all of them
+    from the back and pull them tight one action, then tie them off so the base was held still in the correct way while
+    it dried over a full day. It added an extra few hours of prep work to try this technique but I'm really happy with
+    how well it worked in the end.
+  </p>
+  <p>
+    This is what it looked like after fully applying the glue! The masking tape is wrapping around all unsewn edges and
+    into the interior to hold the fur tight against the base.
+  </p>
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1iYDaF6C6BuZDk6jNjjRjggN4xeudJ6Cx" />
+  <p>
+    The mohawk is a long triangular strip of foam with 2 strips of red fur sewn together and glued to it. That mohawk
+    was then baseball stitched into the fur head and down along the back of the neck. The baseball stitching is
+    surpisingly loose and spread out; you can wiggle your finger through it from one side to the other but it worked
+    really well and you'd never know.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1ir1Y2U03ebZ8pl6vzG4DDylbMA7VwZAj" />
 
   <div class="divider"></div>
@@ -41,20 +97,51 @@
     <h2>Hands</h2>
   </div>
 
+  <p>
+    I followed a pattern for the hand-paws I found online and I'm really pleased with how they came out. It's not
+    perfectly the way I'd want it to look but it's good and to instantly have access to a good pattern is hard to come
+    by. I started by creating all the claws out of stretchy black velvet/velour material, stuffing them with polyfil,
+    then sewing them into the tops of each finger. They're inserted into a dart in the fabric then it's all sewn shut.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hlLYP_Fd436Pze2pkGOWYPA1lbdhc50O" />
+  <p>
+    For the pads beneath claws, I taped and pinned the template guide into the backside of the fabrice then sewed all
+    the pads in one go with a single large sheet of velour then cut the unneeded velour away as close to the stitching
+    as I could. This created empty pads on the fur side of the fabric, and I cut small opennings into the fur which
+    polyfil could be stuffed in and then sewn shut again. This creates large plushy pads, aka beans.
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hjnVSBHOdSAkhcfDWY232iKSJdKJQ6Ja" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hwP1Dx_a_WdaP8-kKeD1m3YvDUOUwFrj" />
+  <p>
+    Once top and bottom halves were finished, it was time to painstakingly sew them together (<b>very</b> hard to feed
+    the fabric in at webbing of fingers). then flip them inside out to see the finished result
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hzgeaVNngUyCEFo5nezAbv1EnLQB3uUJ" />
 
   <div class="divider"></div>
   <div id="bodysuit" class="section-header">
     <h2>Bodysuit</h2>
   </div>
-
+  <p>
+    Unless you're a tailor, the most straighforward way to get super accurate pattern of your body is to make a duct
+    tape dummy. There are tons of videos online showing how to do this and it's a several person job. You basically
+    wear a cheap and thin painter suit while others wrap you in 2 layers of duct tape then cut you out of it. 
+  </p>
+  <p>
+    I built up a skin-tight masking tape layer around the dummy that I can use to draw on without worrying that I'm
+    affecting the dummy itself (in case revisions need to be done). 
+  </p>
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hB9yE3gn14VV3WBUPuwr6ozUPj9_UN_N" />
+  <p>
+    Once I finished drawing my pattern onto the dummies masking tape shell, I cut it off and used the shapes as
+    patterns for cutting the fur. There are tons of videos online explaining this process. For my first bodysuit I
+    decided to make it plantigrade (no special padding)
+  </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hSwGnwUpbYWFdfAK36R3RgRE3wuQKCHH" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hX5pz24gvc3o_AhP6Qht5BTFSarz6FbC" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hcfIkP85XabSqM3eeXPiiYuehmSr0aG7" />
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hlRn0Rb9PiiaI0mIVBoU-6hfg02NRXhj" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hcfIkP85XabSqM3eeXPiiYuehmSr0aG7" />
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1jXBEYkAf_MP4YhXOneJNwLoDdk3oh_fW" />
 
   <div class="divider"></div>
   <div id="feet" class="section-header">
@@ -67,7 +154,19 @@
   <div class="divider"></div>
   <div id="tail" class="section-header">
     <h2>Tail</h2>
+    
   </div>
+
+  <p>I don't have many progress pics of the tail, but I tried to make it like
+    <a href="https://youtu.be/vFkfsAU17KQ?si=RiKJdsrz2trMiFHL&t=96">a "super motion" tail</a>.this is what it looks
+    like as the end result
+  </p>
+  <img loading="lazy" src="https://lh3.google.com/u/0/d/1jL99ze7usjJzkqf4-5q_XonvklwCn5nE" />
+
   
-  <!-- <img loading="lazy" src="https://lh3.google.com/u/0/d/1cKCwfkx607ysGBht_MoLufPi2JWl4Wgs" /> -->
+  <div id="result" class="section-header">
+    <h2>End Results</h2>
+  </div>
+
+  <!-- <img loading="lazy" src="https://lh3.google.com/u/0/d/1jL99ze7usjJzkqf4-5q_XonvklwCn5nE" /> -->
 </mat-card>
